--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-everyconf",
-  "version": "0.0.1-2",
-  "description": "Simple yet powerful tool for configuring node.js applications using json, yaml and more.",
+  "name": "everyconf",
+  "version": "0.0.1-3",
+  "description": "Simple yet powerful tool for configuring node.js applications using json, yaml and more formats.",
   "main": "everyconf.js",
   "repository": {
     "type": "git",
@@ -11,7 +11,8 @@
     "configuration",
     "config",
     "json",
-    "yaml"
+    "yaml",
+    "ini"
   ],
   "author": {
     "name": "Matthias Lienau",
@@ -22,9 +23,11 @@
     "url": "https://github.com/atufkas/node-everyconf/issues"
   },
   "dependencies": {
-    "underscore": "~1.5.1"
+    "underscore": "~1.5.1",
+    "yaml": "~0.2.3",
+    "ini": "~1.1.0"
   },
   "engines": {
-    "node": ">=0.8"
+    "node": "*"
   }
 }
